--- a/vignettes/practicalPSI.Rmd
+++ b/vignettes/practicalPSI.Rmd
@@ -135,3 +135,140 @@ full_model_linear
 
 
 
+#### Bootstrapping 
+
+Another option often considered in for quantifying uncertainty of post-selection estimators is bootstrapping. When bootstrapping the data and performing model selection, we have to decide how to handle the case when, for a particular bootstrap sample, some of the variables are not selected. We consider three possible decisions: ignoring non-selections, treating them as confident nulls, or treating them as uncertain nulls. We describe each approach in the following subsections. 
+
+##### Ignored non-selections
+
+In this case, we first perform the variable selection using whole data set and prefer model selection method using either `step_ic()` or `pen_cv()` functions. Then for inference, we only focus on variables that are selected on whole data when bootstrapping. 
+
+To obtain the bootstrap distribution of each $\hat{\beta}_j$ selected by our initial model selection procedure, (which we dub our "prime" model), we proceed as follows:  For each B iterations, we resample the data with replacement, apply the same model selection method to the resampled data, and save the coefficients *for variables that were selected in first step*. If a variable in the prime model is not selected in the current bootstrap model, we set its coefficient to zero. This process provides a bootstrap distribution for each variable that was selected in full dataset, allowing us to calculate confidence intervals based on the quantiles of these distributions. 
+
+```{r AIC bootstrap}
+set.seed(1)
+fit_aic_boot <- infer(fit_aic, method = "boot", B = 100) 
+fit_aic_boot
+tidy(fit_aic_boot) 
+```
+
+Similar to the selective inference result, none of our 3 effects remain significant after adjusting for uncertainty in the model selection process. However, our intervals are finite, which is an improvement. 
+
+##### Confident null non-selections
+
+In this setting, we are interested in making inferences for all variables, including those not selected by the prime model using full data (i.e., using `step_ic()` or `pen_cv()` on full dataset). Compared to the previous approach, the primary difference here is that, for each bootstrap iteration, after applying the same model selection method to a bootstrap sample, we retain the coefficients for *all variables, regardless of whether they were included in the prime model or not*. For any variable not selected in a given bootstrap sample, its coefficient is set to zero. This process produces a bootstrap distribution for all $p$ variables, allowing us to calculate CIs by using the quantiles of these distributions. 
+
+```{r AIC bootstrap 2}
+set.seed(1)
+fit_aic_boot <- infer(fit_aic, method = "boot", B = 100, nonselection = "confident_nulls") 
+fit_aic_boot
+tidy(fit_aic_boot) 
+```
+
+
+Here again we notice that among all the variables, only `wt` and `cycl` variable is selected in more than 50% of the bootstrap samples. However,  here again none of our effects remain significant after adjusting for uncertainty in the model selection process. 
+
+##### Uncertain null non-selections
+
+In this setting, we are also interested in making inferences for all variables, including those not selected by the prime model using full data (i.e., using step_ic() or pen_cv() on full data set). Compared to the previous approach of treating non-selections as `confident null`, the primary difference here is that, for each bootstrap iteration, in order to get coefficient for all variables, we also get the coefficient for non-selections instead of setting them to zero. That is after applying the same selection method to a bootstrap sample, we retain the coefficients for all variables, regardless of whether they were included in the prime model or not. But for any variable not selected in a given bootstrap sample, we regress the model residuals on the each non-selected variables separately to get the beta estimates for non-selections. By doing so, we're trying to explain the residual variance by variables that were not selected by model selection method. This process will again produces a bootstrap distribution for all $p$ variables, allowing us to calculate CIs by using the quantiles of these distributions. 
+
+
+### BIC vs AIC
+
+No matter how we look, we find our selections are no longer significant after adjusting for the selective inference process. What gives? It may be that AIC is not as conducive to post-selection inference as a more conservative criterion such as BIC. Let's investigate. 
+
+```{r}
+fit_bic <- step_ic(y = mtcars$mpg, x=X, penalty = "BIC")
+fit_bic 
+tidy(infer(fit_bic, method = "hybrid"))
+```
+
+As expected with BIC, we get fewer variables, specifically BIC does not select `hp`. And as before, a hybrid method ignoring non-selections finds that both `cyl` and `wt` are significant as shown above. 
+
+*Selective inference*
+
+```{r}
+fit_bic_SI <- infer(fit_bic, method = "selectiveinf")
+fit_bic_SI
+
+tidy(fit_bic_SI)
+```
+
+Selective inference gives wider confidence interval and once selection procedure is taken into account, both selected variables are no longer significant. 
+
+*Bootstrapping*
+
+```{r}
+set.seed(1)
+fit_bic_boot <- infer(fit_bic, method = "boot", B = 100) 
+
+tidy(fit_bic_boot)
+```
+
+Again, with bootstrap with see that while `cyl` is only selected 42% of the times compared to `wt` which is selected 87% of the time. However based on bootstrapped CI, neither of them are significant. 
+
+We find that AIC nor BIC are able to recover any significant effects on their own, regardless of the method used for post-selection inference.  
+
+
+### collating methods 
+
+Lastly, one way to compare the precision of our model selection/inference method is by looking at the length of confidence intervals. That can be done with `ciratio` function which returns a list with three cross tables. One for average CI length across all variables, second one for median CI length across all variables and lastly number of significant discoveries across all models. 
+
+```{r}
+set.seed(1234)
+precision= ciratio(X, y = mtcars$mpg,B=50, nonselection="ignored")
+precision[["avg_ci_ln"]]
+```
+
+We see that in general, the selective inference method gives wider CI compared to hybrid or bootstrap for given model selection procedure. Boostrap gives wider CI compared to hybrid method for full model and stepwise methods but it is more precise on average compared to hybrid for penalized methods. We can also look at average of medianc CI for each variable as follow:
+
+```{r}
+precision[["med_ci_ln"]]
+```
+
+While, we see that medican CI lenght for given model is slightly lower comapred to mean CI length, we see similar trend when comparing different methods as above. 
+
+
+```{r}
+precision[["no_sign_disc"]]
+```
+
+
+We see that in general with bootstrap approach, we have more discovires compared to hybrid and selective inference. 
+
+
+### BIC vs AIC
+
+No matter how we look, we find our selections are no longer significant after adjusting for the selective inference process. What gives? It may be that AIC is not as conducive to post-selection inference as a more conservative criterion such as BIC. Let's investigate. 
+
+```{r}
+fit_bic <- step_ic(y = mtcars$mpg, x=X, penalty = "BIC")
+fit_bic 
+tidy(infer(fit_bic, method = "hybrid"))
+```
+
+As expected with BIC, we get fewer variables, specifically BIC does not select `hp`. And as before, a hybrid method ignoring non-selections finds that both `cyl` and `wt` are significant as shown above. 
+
+*Selective inference*
+
+```{r}
+fit_bic_SI <- infer(fit_bic, method = "selectiveinf")
+fit_bic_SI
+
+tidy(fit_bic_SI)
+```
+
+Selective inference gives wider confidence interval and once selection procedure is taken into account, both selected variables are no longer significant. 
+
+*Bootstrapping*
+
+```{r}
+set.seed(1)
+fit_bic_boot <- infer(fit_bic, method = "boot", B = 100) 
+
+tidy(fit_bic_boot)
+```
+
+Again, with bootstrap with see that while `cyl` is only selected 42% of the times compared to `wt` which is selected 87% of the time. However based on bootstrapped CI, neither of them are significant. 
+
+We find that AIC nor BIC are able to recover any significant effects on their own, regardless of the method used for post-selection inference.  
